# sample-one-click-generative-ai-solutions

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.amazonq/: mcp.json
.amazonq/cli-agents/: development.json
.amazonq/rules/: deployment.md
.github/workflows/: deploy-docs.yml
.kiro/agents/: developer.json  development.json
.kiro/steering/: deployment.md  principles.md
assets/usecases/: contract_party_checker.json  contract_term_checker.json  team_daily_report_organizer.json  usecase_builder_builder.json
deployments/agentdev/: CodeServerForAIAgentDeploymentStack.yaml
deployments/ai-persona/: AIPersonaDeploymentStack.yaml
deployments/aiagentdev/: AIAgentDevelopmentCodeServerDeploymentStack.yaml  KiroIDEDeploymentStack.yaml
deployments/brchat/: BrChatDeploymentStack.yaml
deployments/c360/: C360DeploymentStack.yaml
deployments/comfyui/: ComfyUIDeploymentStack.yaml
deployments/cursor/: CursorDeploymentStack.yaml
deployments/d360/: D360DeploymentStack.yaml
deployments/dify/: DifyDeploymentProcess.yaml  README.md
deployments/genstudio/: GenStudioDeploymentStack.yaml
deployments/genu/: GenUDeploymentProcess.yaml  GenUDeploymentStack.yaml  README.md
deployments/kiro-ide/: KiroIDEDeploymentStack.yaml  KiroIDEUbuntuDeploymentStack.yaml  README.md
docs/: getting-started.md  index.en.md  index.md
docs/industries/: finance.md
en/: index.html
getting-started/: index.html
overrides/: main.html
search/: search_index.json
tests/: test_cloudformation.py
(+106 files in other folders)
