[project]
name = "aws-generative-ai-asset-box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.6.12",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-static-i18n[material]>=1.3.0",
    "pytest>=8.3.5",
]
